# TextRender

./: .gitignore  CMakeLists.txt  LICENSE  cpplint.cmake  text_render_example.cpp
example/: CMakeLists.txt  text_render_example.cpp  time.cpp  time.h
include/: exception.h  font.h  font_bitmap.h  rgb_pixel.h
source/: CMakeLists.txt  exception.cpp  font.cpp  font_bitmap.cpp  text_render_example.cpp
